--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -94,9 +94,7 @@
 <li>Extrudujme ho pomoc&iacute; n&aacute;stroje <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a> a nastavme vzd&aacute;lenost 14,4 mm. Ostatn&iacute; mo&#382;nosti m&#367;&#382;eme nechat na v&yacute;choz&iacute;ch hodnot&aacute;ch:</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_padding.png&amp;filetimestamp=20240928090402&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_padding.png" decoding="async" width="884" height="484" class="mw-file-element" data-file-width="884" data-file-height="484"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The <b>Pad</b> tool is similar to the <span typeof="mw:File"><a href="../index.php?title=Part_Extrude.svg&amp;filetimestamp=20240705092108&amp;.html" class="mw-file-description"><img src="../File/Part_Extrude.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Extrude.html" title="Part Extrude">Part Extrude</a> from the <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a>, but with a key difference: a pad is always linked to its sketch and cannot be moved independently. To reposition the pad, you must move the base sketch, ensuring that the pad remains securely attached. The pad will always remain part of the same body, maintaining the continuity of your design, which is especially useful for complex parts where features need to be built progressively and in alignment with one another. This adds stability to your design, especially when you want to ensure everything stays properly aligned and fixed in place.</li></ul>
-</div>
+<ul><li>N&aacute;stroj <b>Deska</b> je podobn&yacute; n&aacute;stroji <span typeof="mw:File"><a href="../index.php?title=Part_Extrude.svg&amp;filetimestamp=20240705092108&amp;.html" class="mw-file-description"><img src="../File/Part_Extrude.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Extrude.html" title="Part Extrude">Vysunut&iacute;</a> v <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plo&scaron;e Part</a>, ale s jedn&iacute;m z&aacute;sadn&iacute;m rozd&iacute;lem: deska je v&#382;dy propojena se sv&yacute;m n&aacute;&#269;rtem a nelze ji p&#345;esouvat samostatn&#283; Chcete-li zm&#283;nit polohu desky, mus&iacute;te p&#345;esunout z&aacute;kladn&iacute; n&aacute;&#269;rt a zajistit, aby deska z&#367;stala pevn&#283; p&#345;ipevn&#283;na. Deska v&#382;dy z&#367;stane sou&#269;&aacute;st&iacute; stejn&eacute;ho t&#283;lesa, &#269;&iacute;m&#382; se zachov&aacute; kontinuita va&scaron;eho n&aacute;vrhu, co&#382; je zvl&aacute;&scaron;t&#283; u&#382;ite&#269;n&eacute; u slo&#382;it&yacute;ch d&iacute;l&#367;, kde je t&#345;eba prvky vytv&aacute;&#345;et postupn&#283; a vz&aacute;jemn&#283; je sladit. To zvy&scaron;uje stabilitu va&scaron;eho n&aacute;vrhu, zejm&eacute;na pokud chcete zajistit, aby v&scaron;e z&#367;stalo spr&aacute;vn&#283; vyrovnan&eacute; a ukotven&eacute; na sv&eacute;m m&iacute;st&#283;.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>Let's create the eight cylinders on the top face of the block. First, select the top face of the block and then click on the <span typeof="mw:File"><a href="../index.php?title=Std_AlignToSelection.svg&amp;filetimestamp=20240705143347&amp;.html" class="mw-file-description"><img src="../File/Std_AlignToSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_AlignToSelection.html" title="Std AlignToSelection">Align to selection</a> option to align the view to this face. This will provide a clear and direct view, making it easier to accurately place the cylinders.</li>
 <li>Click on the <span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">New Sketch</a> button. The new sketch will be created directly on the top face.</li>
@@ -198,13 +196,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112100922
+Cached time: 20260112101407
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.100 seconds
-Real time usage: 0.147 seconds
-Preprocessor visited node count: 87/1000000
+CPU time usage: 0.134 seconds
+Real time usage: 0.189 seconds
+Preprocessor visited node count: 86/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -214,13 +212,13 @@ Unstrip post&#8208;expand size: 2702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.570      1 -total
- 73.47%    5.562      1 Template:Manual:TOC
- 60.09%    4.549      1 Manual:Summary/cs
- 22.75%    1.722      2 Template:Docnav
+100.00%   10.451      1 -total
+ 69.10%    7.222      1 Template:Manual:TOC
+ 54.13%    5.657      1 Manual:Summary/cs
+ 26.22%    2.740      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112100922 and revision id 1737379. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112101406 and revision id 1737381. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
