--- a/wiki/it/External_workbenches.html
+++ b/wiki/it/External_workbenches.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">External workbenches/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-External+workbenches&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Externe Arbeitsbereiche (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Externe Arbeitsbereiche (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../External_workbenches.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="External workbenches (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/External_workbenches.html" class="mw-pt-progress mw-pt-progress--med" title="Bancos de trabajo externos (53% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Ateliers externes (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Zewn&#281;trzne &#347;rodowiska pracy (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Zewn&#281;trzne &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="External workbenches (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Bancadas de trabalho externas (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Ateliere Externe (1% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -1185,16 +1185,15 @@ Questi ambienti sono generalmente incompatibili l'uno con l'altro. Se si crea un
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a href="../Robust_MCP_Bridge_Workbench.html" title="Robust MCP Bridge Workbench">Robust MCP Bridge</a>
 </td>
-<td>Information and data
+<td>Informazioni e dati
 </td>
-<td>The Bridge workbench is designed to provide an interface between FreeCAD and the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> to enable AI assistants (like Claude) to control FreeCAD via the Model Context Protocol (MCP). It provides XML-RPC and JSON-RPC interfaces for external automation.
+<td>L'ambiente di lavoro Bridge &egrave; progettato per fornire un'interfaccia tra FreeCAD e <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> per consentire agli assistenti AI (come Claude) di controllare FreeCAD tramite il Model Context Protocol (MCP). Fornisce interfacce XML-RPC e JSON-RPC per l'automazione esterna.
 </td>
 <td>spkane
 </td>
@@ -1203,7 +1202,6 @@ Questi ambienti sono generalmente incompatibili l'uno con l'altro. Se si crea un
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 </td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=WebTools_workbench_icon.svg&amp;filetimestamp=20200208234602&amp;.html" class="mw-file-description"><img src="../File/WebTools_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -2083,33 +2081,33 @@ Questi ambienti sono generalmente incompatibili l'uno con l'altro. Se si crea un
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212155
+Cached time: 20260112102712
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.324 seconds
-Real time usage: 0.406 seconds
-Preprocessor visited node count: 503/1000000
+CPU time usage: 0.380 seconds
+Real time usage: 0.556 seconds
+Preprocessor visited node count: 502/1000000
 Post&#8208;expand include size: 8062/2097152 bytes
 Template argument size: 2389/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2762/5000000 bytes
+Unstrip post&#8208;expand size: 2776/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.159      1 -total
- 46.14%    9.302      1 Template:Userdocnavi/it
- 17.41%    3.509      1 Template:Navigation_menu_2
- 12.06%    2.432      2 Template:Docnav/it
- 11.97%    2.412      1 Template:KEY
- 11.93%    2.405      1 Template:Version/it
-  7.81%    1.575      1 Template:TOCright
-  6.38%    1.287      2 Template:FileName
+100.00%   16.895      1 -total
+ 40.28%    6.806      1 Template:Userdocnavi/it
+ 20.65%    3.489      1 Template:Navigation_menu_2
+ 14.67%    2.479      2 Template:Docnav/it
+ 10.44%    1.764      1 Template:Version/it
+ 10.34%    1.746      1 Template:TOCright
+  9.35%    1.580      1 Template:KEY
+  9.27%    1.566      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61635-0!canonical and timestamp 20260111212155 and revision id 1736449. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61635-0!canonical and timestamp 20260112102711 and revision id 1737383. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
