--- a/wiki/bg/Manual;Introduction.html
+++ b/wiki/bg/Manual;Introduction.html
@@ -15,6 +15,7 @@
 <li><a href="../pt/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="Manual:Introdu&ccedil;&atilde;o (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="Manual:Introdu&ccedil;&atilde;o (100% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--low" title="Manual:Introducere (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="../cs/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="Manu&aacute;l:&Uacute;vod (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1042;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="&#25163;&#20876;&#65306;&#24341;&#35328; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
@@ -25,7 +26,7 @@
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
     <div><a href="../Manual;What_is_FreeCAD.html" title="Manual:What is FreeCAD">Manual:What is FreeCAD</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-    <div><a class="mw-selflink selflink">Manual start</a>
+    <div><a class="mw-selflink selflink">&#1053;&#1072;&#1095;&#1072;&#1083;&#1086; &#1085;&#1072; &#1091;&#1095;&#1077;&#1073;&#1085;&#1080;&#1082;&#1072;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <div id="toc" class="manualtoc" style="float:right; margin:10px 0px 10px 10px;">
@@ -92,29 +93,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260110203722
+Cached time: 20260112103624
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.062 seconds
-Real time usage: 0.106 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.155 seconds
 Preprocessor visited node count: 63/1000000
-Post&#8208;expand include size: 7811/2097152 bytes
-Template argument size: 454/2097152 bytes
+Post&#8208;expand include size: 7877/2097152 bytes
+Template argument size: 498/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4175/5000000 bytes
+Unstrip post&#8208;expand size: 4340/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.082      1 -total
- 74.31%    6.749      1 Template:Manual:TOC
- 54.40%    4.941      1 Manual:Summary/bg
- 22.16%    2.012      2 Template:Docnav
+100.00%    9.123      1 -total
+ 74.53%    6.799      1 Template:Manual:TOC
+ 55.76%    5.087      1 Manual:Summary/bg
+ 22.54%    2.056      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409904-0!canonical and timestamp 20260110203721 and revision id 1732053. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409904-0!canonical and timestamp 20260112103624 and revision id 1737395. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
