--- a/wiki/bg/Manual;Introduction.html
+++ b/wiki/bg/Manual;Introduction.html
@@ -88,20 +88,20 @@
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
     <div><a href="../Manual;What_is_FreeCAD.html" title="Manual:What is FreeCAD">Manual:What is FreeCAD</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-    <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
+    <div><a class="mw-selflink selflink">&#1053;&#1072;&#1095;&#1072;&#1083;&#1086; &#1085;&#1072; &#1091;&#1095;&#1077;&#1073;&#1085;&#1080;&#1082;&#1072;</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112103624
+Cached time: 20260112103817
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.073 seconds
-Real time usage: 0.155 seconds
+CPU time usage: 0.059 seconds
+Real time usage: 0.099 seconds
 Preprocessor visited node count: 63/1000000
-Post&#8208;expand include size: 7877/2097152 bytes
-Template argument size: 498/2097152 bytes
+Post&#8208;expand include size: 7952/2097152 bytes
+Template argument size: 548/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -109,13 +109,13 @@ Unstrip post&#8208;expand size: 4340/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.123      1 -total
- 74.53%    6.799      1 Template:Manual:TOC
- 55.76%    5.087      1 Manual:Summary/bg
- 22.54%    2.056      2 Template:Docnav
+100.00%    7.973      1 -total
+ 72.50%    5.780      1 Template:Manual:TOC
+ 56.89%    4.536      1 Manual:Summary/bg
+ 23.62%    1.883      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409904-0!canonical and timestamp 20260112103624 and revision id 1737395. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409904-0!canonical and timestamp 20260112103816 and revision id 1737397. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
