--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -165,16 +165,14 @@
 <p><span id="Lines"></span>
 </p>
 <h3><span class="mw-headline" id="Linien">Linien</span></h3>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Liniennorm</b>: Norm nach der Schnittlinien einer <a href="../de/TechDraw_SectionView.html" title="TechDraw SectionView/de">Schnittansicht</a> erstellt werden.</li>
 <li><b>Liniengruppe</b>: Eine <a href="../de/TechDraw_LineGroup.html" title="TechDraw LineGroup/de">Liniengruppe</a> wird zum Einstellen der vorgegebenen Linienbreitenverwendet.</li>
 <li><b>Darstellung verdeckter Kanten</b>: Linienart f&uuml;r verdeckte Kanten. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
-<li><b>Schnittliniendarstellung</b>: Linienart f&uuml;r Schnittlinien.</li>
+<li><b>Linienart f&uuml;r Schnittlinien</b>: Linienart f&uuml;r Schnittlinien.</li>
 <li><b>Linienart f&uuml;r Detailauswahlrahmen</b>: Linienart f&uuml;r die Umrissform der   <a href="../de/TechDraw_DetailView.html" title="TechDraw DetailView/de">Detailansichten</a>.</li>
-<li><b>Mittelliniendarstellung</b>: Standard-Linienart f&uuml;r <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Mittellinien</a>.</li>
+<li><b>Linienart f&uuml;r Mittellinien</b>: Standard-Linienart f&uuml;r <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Mittellinien</a>.</li>
 <li><b>Linienart f&uuml;r Bruchkanten</b>: Standard-Linienart zum Kennzeichnen von <a href="../de/TechDraw_BrokenView.html" title="TechDraw BrokenView/de">unterbrochenen Ansichten</a>. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
-<li><b>Form der Linienenden</b>: Der Standardwert (Rund) sollte in den meisten F&auml;llen die richtige Wahl sein. Flach oder Quadrat sind n&uuml;tzlich, wenn eine Zeichnung als 1:1 Schablone (? cutting guide) verwendet werden soll.</li></ul>
-</div>
+<li><b>Form der Linienenden</b>: Der Standardwert (Rund) sollte in den meisten F&auml;llen die richtige Wahl sein. Flach oder Quadrat sind n&uuml;tzlich, wenn eine Zeichnung als 1:1 Schnittvorlage verwendet werden soll.</li></ul>
 <p><span id="Colors"></span>
 </p>
 <h2><span class="mw-headline" id="Farben">Farben</span></h2>
@@ -284,13 +282,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112121110
+Cached time: 20260112121700
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 634/1000000
+CPU time usage: 0.107 seconds
+Real time usage: 0.156 seconds
+Preprocessor visited node count: 633/1000000
 Post&#8208;expand include size: 28248/2097152 bytes
 Template argument size: 10597/2097152 bytes
 Highest expansion depth: 5/100
@@ -300,19 +298,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.953      1 -total
- 36.60%   10.598      1 Template:TechDraw_Tools_navi/de
- 21.13%    6.118      2 Template:Navigation_menu_2
- 12.38%    3.583      1 Template:Userdocnavi/de
- 11.71%    3.391      2 Template:Docnav/de
- 10.66%    3.085     33 Template:Version/de
-  7.00%    2.028      2 Template:Button
-  4.96%    1.435      1 Template:TOCright
-  4.03%    1.166      1 Template:KEY
-  3.37%    0.976      2 Template:MenuCommand
+100.00%   27.183      1 -total
+ 21.92%    5.958      1 Template:TechDraw_Tools_navi/de
+ 19.60%    5.327     33 Template:Version/de
+ 13.67%    3.715      2 Template:Docnav/de
+ 13.60%    3.698      2 Template:Navigation_menu_2
+ 10.78%    2.931      2 Template:MenuCommand
+  8.22%    2.234      1 Template:TOCright
+  6.41%    1.742      1 Template:Userdocnavi/de
+  5.90%    1.604      2 Template:Button
+  5.02%    1.366      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112121110 and revision id 1737424. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112121700 and revision id 1737434. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
