--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -140,9 +140,7 @@
 <ul><li>Vyberte dokon&#269;en&yacute; n&aacute;&#269;rt a pou&#382;ijte n&aacute;stroj <span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a> s d&eacute;lkou 12 mm.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_BottomPad.png&amp;filetimestamp=20240928105608&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_BottomPad.png" decoding="async" width="953" height="496" class="mw-file-element" data-file-width="953" data-file-height="496"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>This is it. Our brick is ready. If you wish to change its color, you can do so by going to the <b>View tab</b>.</li></ul>
-</div>
+<ul><li>A je to. Na&scaron;e cihla je hotov&aacute;. Pokud chcete zm&#283;nit jej&iacute; barvu, m&#367;&#382;ete tak u&#269;init na <b>z&aacute;lo&#382;ce Zobrazit</b>.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_redBrick2.png&amp;filetimestamp=20240928110447&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_redBrick2.png" decoding="async" width="651" height="654" class="mw-file-element" data-file-width="651" data-file-height="654"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -182,13 +180,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112121522
+Cached time: 20260112121818
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.116 seconds
-Real time usage: 0.166 seconds
-Preprocessor visited node count: 79/1000000
+CPU time usage: 0.125 seconds
+Real time usage: 0.194 seconds
+Preprocessor visited node count: 78/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -198,13 +196,13 @@ Unstrip post&#8208;expand size: 2703/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.559      1 -total
- 74.12%    7.085      1 Template:Manual:TOC
- 59.41%    5.679      1 Manual:Summary/cs
- 21.54%    2.059      2 Template:Docnav
+100.00%   13.646      1 -total
+ 70.06%    9.560      1 Template:Manual:TOC
+ 51.93%    7.086      1 Manual:Summary/cs
+ 26.83%    3.662      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121522 and revision id 1737430. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121818 and revision id 1737436. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
