--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -142,11 +142,8 @@
 </p>
 <ul><li>A je to. Na&scaron;e cihla je hotov&aacute;. Pokud chcete zm&#283;nit jej&iacute; barvu, m&#367;&#382;ete tak u&#269;init na <b>z&aacute;lo&#382;ce Zobrazit</b>.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_redBrick2.png&amp;filetimestamp=20240928110447&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_redBrick2.png" decoding="async" width="651" height="654" class="mw-file-element" data-file-width="651" data-file-height="654"></a></span>
+</p><p>Mo&#382;n&aacute; jste si v&scaron;imli, &#382;e historie modelov&aacute;n&iacute; ve stromov&eacute;m zobrazen&iacute; je pom&#283;rn&#283; rozs&aacute;hl&aacute;. To je velmi cenn&eacute;, proto&#382;e n&aacute;m umo&#382;&#328;uje kdykoli se vr&aacute;tit a upravit jak&yacute;koli krok v procesu n&aacute;vrhu. Nap&#345;&iacute;klad p&#345;izp&#367;soben&iacute; tohoto modelu tak, aby vytvo&#345;il cihlu 2x2 nam&iacute;sto 2x4, by bylo hra&#269;kou &ndash; sta&#269;ilo by jen n&#283;kolik &uacute;prav rozm&#283;r&#367; a v&yacute;skytu vzoru. Stejn&aacute; flexibilita n&aacute;m umo&#382;&#328;uje navrhovat v&#283;t&scaron;&iacute;, p&#345;izp&#367;soben&eacute; d&iacute;ly, kter&eacute; nejsou sou&#269;&aacute;st&iacute; p&#367;vodn&iacute; sady Lego. Parametrick&aacute; povaha FreeCADu usnad&#328;uje &uacute;pravy st&aacute;vaj&iacute;c&iacute;ch model&#367; a d&aacute;v&aacute; n&aacute;m plnou kontrolu nad p&#345;izp&#367;soben&iacute;m nebo roz&scaron;&iacute;&#345;en&iacute;m n&aacute;vrhu podle pot&#345;eby.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>You may notice that the modeling history in the tree view has become quite extensive. This is incredibly valuable, as it allows us to revisit and modify any step in the design process at any time. For instance, adapting this model to create a 2x2 brick instead of a 2x4 would be a breeze&mdash;just a few adjustments to the dimensions and pattern occurrences would do the trick. This same flexibility allows us to design larger, custom pieces that aren't part of the original Lego set. The parametric nature of FreeCAD makes it easy to modify existing models, giving us full control to adapt or expand the design as needed.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>But we could also want to get rid of the history, for example, if we are going to model a castle with this brick, and we don't want to have this whole history repeated 500 times in our file.
 </p>
@@ -180,13 +177,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112121818
+Cached time: 20260112121903
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.125 seconds
-Real time usage: 0.194 seconds
-Preprocessor visited node count: 78/1000000
+CPU time usage: 0.121 seconds
+Real time usage: 0.173 seconds
+Preprocessor visited node count: 77/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -196,13 +193,13 @@ Unstrip post&#8208;expand size: 2703/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.646      1 -total
- 70.06%    9.560      1 Template:Manual:TOC
- 51.93%    7.086      1 Manual:Summary/cs
- 26.83%    3.662      2 Template:Docnav
+100.00%   11.848      1 -total
+ 81.51%    9.658      1 Template:Manual:TOC
+ 48.85%    5.788      1 Manual:Summary/cs
+ 15.65%    1.854      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121818 and revision id 1737436. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121902 and revision id 1737438. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
