--- a/wiki/cs/Manual;Modeling_for_product_design.html
+++ b/wiki/cs/Manual;Modeling_for_product_design.html
@@ -143,11 +143,8 @@
 <ul><li>A je to. Na&scaron;e cihla je hotov&aacute;. Pokud chcete zm&#283;nit jej&iacute; barvu, m&#367;&#382;ete tak u&#269;init na <b>z&aacute;lo&#382;ce Zobrazit</b>.</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Exercise1_redBrick2.png&amp;filetimestamp=20240928110447&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Exercise1_redBrick2.png" decoding="async" width="651" height="654" class="mw-file-element" data-file-width="651" data-file-height="654"></a></span>
 </p><p>Mo&#382;n&aacute; jste si v&scaron;imli, &#382;e historie modelov&aacute;n&iacute; ve stromov&eacute;m zobrazen&iacute; je pom&#283;rn&#283; rozs&aacute;hl&aacute;. To je velmi cenn&eacute;, proto&#382;e n&aacute;m umo&#382;&#328;uje kdykoli se vr&aacute;tit a upravit jak&yacute;koli krok v procesu n&aacute;vrhu. Nap&#345;&iacute;klad p&#345;izp&#367;soben&iacute; tohoto modelu tak, aby vytvo&#345;il cihlu 2x2 nam&iacute;sto 2x4, by bylo hra&#269;kou &ndash; sta&#269;ilo by jen n&#283;kolik &uacute;prav rozm&#283;r&#367; a v&yacute;skytu vzoru. Stejn&aacute; flexibilita n&aacute;m umo&#382;&#328;uje navrhovat v&#283;t&scaron;&iacute;, p&#345;izp&#367;soben&eacute; d&iacute;ly, kter&eacute; nejsou sou&#269;&aacute;st&iacute; p&#367;vodn&iacute; sady Lego. Parametrick&aacute; povaha FreeCADu usnad&#328;uje &uacute;pravy st&aacute;vaj&iacute;c&iacute;ch model&#367; a d&aacute;v&aacute; n&aacute;m plnou kontrolu nad p&#345;izp&#367;soben&iacute;m nebo roz&scaron;&iacute;&#345;en&iacute;m n&aacute;vrhu podle pot&#345;eby.
+</p><p>Ale tak&eacute; bychom se mohli cht&iacute;t zbavit historie, nap&#345;&iacute;klad pokud chceme z t&eacute;to cihly modelovat hrad a nechceme, aby se cel&aacute; tato historie opakovala v na&scaron;em souboru 500kr&aacute;t.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>But we could also want to get rid of the history, for example, if we are going to model a castle with this brick, and we don't want to have this whole history repeated 500 times in our file.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>There are two simple ways to get rid of the history, one is using the <a href="../Part_SimpleCopy.html" title="Part SimpleCopy">Create simple copy</a> tool from the <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a>, which will create a copy of our piece that doesn't depend anymore on the history (you can delete the whole history afterwards), the other way is exporting the piece as a STEP file and re-importing it.
 </p>
@@ -177,13 +174,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112121903
+Cached time: 20260112121929
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.121 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 77/1000000
+CPU time usage: 0.125 seconds
+Real time usage: 0.175 seconds
+Preprocessor visited node count: 76/1000000
 Post&#8208;expand include size: 8391/2097152 bytes
 Template argument size: 780/2097152 bytes
 Highest expansion depth: 5/100
@@ -193,13 +190,13 @@ Unstrip post&#8208;expand size: 2703/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.848      1 -total
- 81.51%    9.658      1 Template:Manual:TOC
- 48.85%    5.788      1 Manual:Summary/cs
- 15.65%    1.854      2 Template:Docnav
+100.00%   10.864      1 -total
+ 69.98%    7.603      1 Template:Manual:TOC
+ 47.40%    5.150      1 Manual:Summary/cs
+ 26.02%    2.827      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121902 and revision id 1737438. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410789-0!canonical and timestamp 20260112121929 and revision id 1737440. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
